[metadata]
name = gotabpfn
version = 0.1.9
author = Al Zadid Sultan Bin Habib, Md Younus Ahamed, Prashnna Kumar Gyawali, Gianfranco Doretto, Donald A. Adjeroh
description = GOTabPFN: From Feature Ordering to Compact Tokenization for Tabular Foundation Models on High-Dimensional Data
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/zadid6pretam/GOTabPFN
project_urls =
    Paper = https://icml.cc/virtual/2026/poster/62523
    Conference = https://icml.cc/
    Source = https://github.com/zadid6pretam/GOTabPFN
    Issues = https://github.com/zadid6pretam/GOTabPFN/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.23
    pandas>=1.5
    scipy>=1.11
    scikit-learn>=1.2
    tqdm>=4.64
    optuna>=3.5
    torch>=2.1
    tabpfn==6.3.1
    kmeans-gpu==0.0.5
    matplotlib>=3.7
include_package_data = True

[options.packages.find]
include =
    gotabpfn
    gotabpfn.*

[options.package_data]
gotabpfn =
    GO-LR.py
    NSC.py
    NSC-P.py
    NSC-SP.py
    NSC-pSP.py
    gotabpfn_dataset_diagnostics.py
